--- a/style.css
+++ b/style.css
@@ -72,11 +72,11 @@
   width: 100%;
   display: flex;
   flex-direction: row;
-  text-align: center;
+  
   padding-top: 12px;
   padding-bottom: 12px;
-  padding-left: 50px;
-  padding-right: 12px;
+  padding-left: 15px;
+  padding-right: 10px;
   gap: 12px;
   max-width: 97px;
  
@@ -89,6 +89,7 @@
   color: #4B5563;
   align-items: center;
  
+ 
 
 }
 
@@ -98,7 +99,7 @@
   display: flex;
   font: normal;
   align-items: center;
-  gap: 1120px;
+  gap: 1062px;
   
   
 
@@ -227,7 +228,7 @@ p {
   line-height: 20px;
   text-align: right;
   font: 20px;
-
+margin-top: 24px;
   color: #1f2937;
   
 }
