--- a/style.css
+++ b/style.css
@@ -1,28 +1,27 @@
-* {
+*{
   margin: 0px;
-  
+  padding: 0px;
   box-sizing: border-box;
 }
 
 .main {
   max-width: 1440px;
   width: 100%;
- margin-top: auto;
- margin-bottom: auto;
- margin-left: auto;
- margin-right: auto;
+ 
   font-family: "work sans", serif;
   align-items: start;
+  margin-left: 80px;
+  margin-right: 80px;
+  margin-top: 48px;
+  margin-bottom: 48px;
  
 }
 
 .sub-main {
   max-width: 1280px;
   width: 100%;
-  padding-left: 80px;
-  padding-top: 48px;
-  padding-bottom: 48px;
-  padding-right: 80px;
+ 
+ 
 }
 
 
