--- a/style.css
+++ b/style.css
@@ -2,31 +2,21 @@
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
+  font-family: "work sans", serif;
 }
 
 .main {
   max-width: 1440px;
   width: 100%;
- 
-  font-family: "work sans", serif;
   align-items: start;
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: auto;
-  margin-top: auto;
- 
+  margin: 0px auto 0px auto;
 }
 
 .sub-main {
   max-width: 1280px;
   width: 100%;
- 
- margin-left: 80px;
- margin-right: 80px;
- margin-top: 48px;
- margin-bottom: 48px;
-
- 
+ margin-left: auto;
+ margin-right: auto;
 }
 
 
@@ -57,18 +47,17 @@
 }
 
 .product {
-  font-size: 24px;
-  font-weight: 400;
-  text-align: left;
+  
   color: #4b5563;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+ 
+ max-width:143px;
+ width: 100%;
+ font-weight: 400;
+ font-size: 24px;
+ 
+  
 
-  padding-left: 1px;
-  padding-right: 12px;
-  padding-top: 16px;
-  padding-bottom: 12px;
+
 }
 
 .filter-button {
@@ -98,12 +87,15 @@
 }
 
 .textbtn {
-  max-width: 97px;
-  justify-content: space-between;
-  display: flex;
-  font: normal;
-  align-items: center;
-  gap: 1062px;
+  
+ max-width: 143px;
+ width: 100%;
+ font-weight: 400;
+ font-size: 24px;
+ display: flex;
+ flex-direction: row;
+ justify-content: space-between;
+ gap: 1048px;
   
   
 
@@ -112,13 +104,16 @@
   max-width: 97px;
   width: 100%;
   display: flex;
-  
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 .filter {
   top: 120px;
   left: 1263px;
   padding: 2px;
+  display: flex;
+  flex-direction: row;
   justify-content: space-between;
   font-size: 14px;
   font-weight: lighter;
