--- a/style.css
+++ b/style.css
@@ -49,16 +49,17 @@
 .product {
   
   color: #4b5563;
- 
+
  max-width:143px;
  width: 100%;
  font-weight: 400;
  font-size: 24px;
- 
+ line-height: 24px;
   
 
 
 }
+
 
 .filter-button {
   align-items: center;
@@ -95,7 +96,7 @@
  display: flex;
  flex-direction: row;
  justify-content: space-between;
- gap: 1048px;
+ gap: 1030px;
   
   
 
@@ -106,6 +107,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  
 }
 
 .filter {
