--- a/style.css
+++ b/style.css
@@ -77,7 +77,9 @@
   padding-right: 8px;
   gap: 15px;
   border-color: 1px solid #f9fafb;
-  background-color: #f9fafb;
+  background: #F9FAFB;
+
+margin-bottom: -96px;
   
 
 }
