--- a/style.css
+++ b/style.css
@@ -83,6 +83,18 @@ margin-bottom: -96px;
   
 
 }
+.filter-button h4{
+  max-width: 44px;
+  width: 100%;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 14px;
+  text-align: left;
+  color: #4B5563;
+
+
+}
+
 
 .grid-container {
   display: grid;
