--- a/style.css
+++ b/style.css
@@ -64,8 +64,10 @@
 
 .filter-button {
   align-items: center;
-  color: #4b5563;
+  background-color: #F9FAFB;
   max-width: 97px;
+  height: fit-content;
+  margin-top: 72px;
   width: 100%;
   font-size: 14px;
   font-weight: 400;
@@ -77,22 +79,12 @@
   padding-right: 8px;
   gap: 15px;
   border-color: 1px solid #f9fafb;
-
-
-margin-bottom: -96px;
-  
-
 }
 .filter-button h4{
-  max-width: 44px;
-  width: 100%;
   font-size: 14px;
   font-weight: 400;
   line-height: 14px;
-  text-align: left;
   color: #4B5563;
-
-
 }
 
 
