--- a/style.css
+++ b/style.css
@@ -112,6 +112,7 @@
   margin-top: 24px;
   margin-bottom: 24px;
   max-width: 405px;
+  gap:80px;
   
 }
 
@@ -181,8 +182,9 @@
   text-align: start;
   font-size: 24px;
   color: #1f2937;
-  margin-top: 24px;
-  margin-bottom:45px;
+ 
+ margin-top: 40px;
+ margin-bottom: 60px;
   font-weight: 600;
 
 
@@ -194,10 +196,10 @@ p {
   font-weight: 400;
   line-height: 20px;
   text-align: right;
-  
+ margin-bottom: 80px;
   color: #1f2937;
- margin-top: -8px;
+
 }
 .item img{
-  margin-top: -25px;
+  margin-top: -63px;
 }
