--- a/style.css
+++ b/style.css
@@ -79,6 +79,7 @@
   padding-right: 8px;
   gap: 15px;
   border-color: 1px solid #f9fafb;
+  margin-bottom: -22px;
 }
 .filter-button h4{
   font-size: 14px;
@@ -86,7 +87,9 @@
   line-height: 14px;
   color: #4B5563;
 }
-
+.filter-button img{
+  margin-top: -16spx;
+}
 
 .grid-container {
   display: grid;
@@ -161,7 +164,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  margin-top: 24px;
+ 
 }
 
 .item {
@@ -183,7 +186,7 @@
   font-size: 24px;
   color: #1f2937;
  
- margin-top: 40px;
+ margin-top:32px;
  margin-bottom: 60px;
   font-weight: 600;
 
@@ -198,8 +201,6 @@ p {
   text-align: right;
  margin-bottom: 80px;
   color: #1f2937;
-
-}
-.item img{
-  margin-top: -63px;
+margin-top: -22px;
+  
 }
