--- a/style.css
+++ b/style.css
@@ -97,7 +97,7 @@
   grid-template-columns: 3;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(3, 1fr);
-  gap: 114px;
+  gap: 32gitpx;
   margin-top: 80px;
   
   margin-bottom: 48px;
